[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/Bullet.gd" type="Script" id=1]
[ext_resource path="res://Assets/Gun/bullet 8x8.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sound/enemy_dead.wav" type="AudioStream" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 3.0
height = 0.0

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=3]
curve = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=4]
lifetime_randomness = 0.5
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 20.0
initial_velocity_random = 0.5
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 1.3
scale_curve = SubResource( 3 )

[sub_resource type="OccluderPolygon2D" id=6]
polygon = PoolVector2Array( -1, -3, -1, -2, -2, -2, -2, -1, -3, -1, -3, 1, -2, 1, -2, 2, -1, 2, -1, 3, 1, 3, 1, 2, 2, 2, 2, 1, 3, 1, 3, -1, 2, -1, 2, -2, 1, -2, 1, -3 )

[node name="Bullet" type="Area2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
self_modulate = Color( 2, 2, 2, 1 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="Particles2D" type="Particles2D" parent="."]
self_modulate = Color( 2, 2, 2, 1 )
emitting = false
amount = 10
one_shot = true
explosiveness = 1.0
local_coords = false
process_material = SubResource( 4 )
texture = ExtResource( 2 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource( 6 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="EnemyDie" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
